# http-mapping-reproxy

./: .env  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  sse.env
config/: mapping.yaml  mapping.yaml.template  mapping_haier_oauth.yaml  mapping_luckin_oauth.yaml  mapping_sse.yaml
kubernetes/: dify-sso-adapter.yaml  luckin_oauth_adapter.yaml
src/: config.rs  main.rs
